Fixed scrollbars on project page.

--- a/app/app.css
+++ b/app/app.css
@@ -51,6 +51,6 @@
   margin-top: 10px;
 }
 
-.hero {
-
+.hero{
+  box-shadow: 10px;
 }
