--- a/app/project-page/project-page.css
+++ b/app/project-page/project-page.css
@@ -28,3 +28,9 @@
     text-decoration: none;
     display: block;
 }
+
+.card-wrapper {
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 50vh;
+}
